tests/transpiler/x/hs/bool_chain.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:46:22 GMT+7
boom = do
    putStrLn ("boom")
    return (True)


main :: IO ()
main = do
    print (fromEnum ((1 < 2) && (2 < 3) && (3 < 4)))
    print (fromEnum ((1 < 2) && (2 > 3) && boom))
    print (fromEnum ((1 < 2) && (2 < 3) && (3 > 4) && boom))
